[package]
name = "anscape"
version = "0.2.1"
edition = "2021"
license = "MIT"
exclude=[".DS_Store"]
description = "Anscape provides a simple ways to customize your terminal window with styles and a cursor manipulations using ANSI Escape Sequences"
repository = "https://github.com/arg2u/anscape"
documentation="https://docs.rs/anscape"
keywords = ["color", "terminal"]

[lib]
name = "anscape"
structnmap = "src/lib.rs"
doctest = false
doc = true 
crate-type = ["lib"]

[dependencies]
paste = "1.0.8"