[package]
name = "anscape"
version = "0.2.2"
edition = "2021"
license = "MIT"
exclude=[".DS_Store"]
description = "Anscape provides a simple way to customize your terminal window with some styles and colors and manipulate with a cursor position using ANSI Escape Sequences."
repository = "https://github.com/arg2u/anscape"
documentation="https://docs.rs/anscape"
keywords = ["color", "terminal"]

[lib]
name = "anscape"
structnmap = "src/lib.rs"
doctest = false
doc = true 
crate-type = ["lib"]

[dependencies]
paste = "1.0.8"